# parserlib

./: README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: daily_api_check.yml
parserlib/clients/mangalib/: client.py  structs.py
parserlib/clients/ranobelib/: client.py  structs.py
parserlib/core/: base_client.py  base_exporter.py  callback.py  client_loader.py  exceptions.py  exporters.py  http_client.py  models.py  paths.py  registry.py
parserlib/exporters/: epub.py  fb2.py  pdf.py
tests/: conftest.py
tests/clients/live/: test_mangalib_api.py
tests/clients/unit/: conftest.py  test_exporters.py  test_mangalib.py
tests/core/: test_paths.py
tests/live/: test_api.py
tests/unit/: conftest.py  test_exporters.py  test_http_client.py
