[project]
name = "parserlib"
version = "0.1.0"
description = "Downloader for manga and ranobe"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "ebooklib>=0.20",
    "fpdf2>=2.8.7",
    "msgspec>=0.21.1",
    "pillow>=12.2.0",
    "pyrate-limiter>=4.1.0",
    "requests>=2.33.1",
    "selectolax>=0.4.8",
]

[project.optional-dependencies]
cli = [
    "typer>=0.25.1",
]
tui = [
    "rich>=14.3.3",
]

[project.scripts]
parserlib = "cli:main"
parserlib-tui = "tui:main"

[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "tui"]

[tool.setuptools.packages.find]
include = ["parserlib*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
  "-vv",
  "--import-mode=importlib",
  "-m",
  "not api",
  "--cov=parserlib",
  "--cov-report=term-missing",
  "--cov-report=html"
]
markers = [
    "api: tests for checking external APIs"
]

[tool.coverage.report]
show_missing = true
skip_covered = false
